# ratingrelay

./: .env.example  .gitignore  Dockerfile  README.md  config.env.example  docker-compose.yml  env.example  env.py  main.py  plexsync.py  pyproject.toml  ratingrelay.py  requirements.txt  run.sh  services.py  usage.md
.github/workflows/: pylint.yml
ratingrelay/: __init__.py  config.py  database.py  env.py  exceptions.py  lastfm.py  listenbrainz.py  musicbrainz.py  plex.py  ratingrelay.py  relay.py  reset.py  services.py  track.py
run_scripts/: run_docker_linux.sh  run_docker_windows.bat  run_python_linux.sh  run_python_windows.bat
src/: ratingrelay.py
src/tests/: conftest.py  test_env.py  test_lastfm.py  test_listenbrainz.py  test_plex.py  test_ratingrelay.py
src/util/: custom_types.py  env.py  lastfm.py  listenbrainz.py  plex.py
tests/: conftest.py  test_lbz_to_plex.py  test_lfm_to_plex.py  test_misc.py  test_plex_sync.py  test_plex_to_lbz.py  test_plex_to_lfm.py
util/: __init__.py  custom_types.py  env.py  lastfm.py  librefm.py  listenbrainz.py  plex.py  test.py  types.py
