[project]
name = "ratingrelay""
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "liblistenbrainz>=0.5.6",
    "musicbrainzngs>=0.7.1",
    "plexapi>=4.17.0",
    "pylast>=5.5.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]
